[package]
name = "nstd"
version = "0.8.0"
description = "NSTD crate."
license = "MIT"
homepage = "https://github.com/NyantasticUwU/nstd"
repository = "https://github.com/NyantasticUwU/nstd"
readme = "README.md"
edition = "2021"



[lib]
crate-type = ["cdylib", "rlib", "staticlib"]



[features]
default = ["std", "nstd_core"]
std = []
clib = []
nstd_core = ["cty", "platforms"]
nstd_alloc = ["std", "nstd_core", "nstd_os", "nstd_os_alloc"]
nstd_audio = ["std", "cpal", "nstd_fs", "rodio"]
nstd_collections = ["std", "nstd_alloc"]
nstd_env = ["std", "nstd_string"]
nstd_events = ["std", "nstd_input"]
nstd_fs = ["std", "nstd_io"]
nstd_gl = ["std", "futures", "nstd_gui", "nstd_string", "wgpu", "wgpu/spirv"]
nstd_gui = ["std", "nstd_events", "nstd_image"]
nstd_image = ["std", "image", "nstd_core"]
nstd_input = ["std", "nstd_core", "num-derive", "num-traits", "winit", "winit_input_helper"]
nstd_io = ["std", "nstd_core", "nstd_string"]
nstd_math = ["std"]
nstd_net = ["std"]
nstd_os = ["std"]
nstd_os_alloc = ["std", "libc", "nstd_core", "windows", "windows/Win32_Foundation", "windows/Win32_System_Memory"]
nstd_os_def = ["std"]
nstd_os_io = ["std", "nstd_core", "nstd_os_def", "windows", "windows/Win32_Foundation", "windows/Win32_Globalization", "windows/Win32_System_Console"]
nstd_proc = ["std"]
nstd_string = ["std", "nstd_collections"]
nstd_sys = ["std", "nstd_string"]
nstd_thread = ["std", "nstd_core"]
nstd_time = ["std", "chrono"]



[dependencies]
chrono = { version="0.4.19", optional=true }
cpal = { version="0.13.4", optional=true }
cty = { version="0.2.2", optional=true }
futures = { version="0.3.19", optional=true }
image = { version="0.24.0", optional=true }
num-derive = { version="0.3.3", optional=true }
num-traits = { version="0.2.14", optional=true }
platforms = { version="2.0.0", optional=true, default-features=false }
rodio = { version="0.15.0", optional=true }
wgpu = { version="0.12", optional=true }
winit = { version="0.26.1", optional=true }
winit_input_helper = { version="0.11.0", optional=true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version="0.2.117", optional=true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version="0.32.0", optional=true }



[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
