[package]
name = "nstd"
version = "0.9.12"
description = "NSTD crate."
license = "MIT"
homepage = "https://github.com/NyantasticUwU/nstd"
repository = "https://github.com/NyantasticUwU/nstd"
readme = "README.md"
edition = "2021"
exclude = ["include"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]



[lib]
crate-type = ["cdylib", "rlib", "staticlib"]



[features]
default = ["std", "nstd_core"]
std = []
clib = []
nstd_core = ["cty", "platforms"]
nstd_alloc = ["std", "nstd_os_alloc"]
nstd_audio = ["std", "cpal", "nstd_fs", "rodio"]
nstd_collections = ["std", "nstd_math", "nstd_vec"]
nstd_env = ["std", "nstd_string"]
nstd_events = ["std", "nstd_gui", "nstd_input"]
nstd_fs = ["std", "nstd_io"]
nstd_gl = ["std", "futures", "nstd_gui", "nstd_string", "wgpu", "wgpu/spirv"]
nstd_gui = ["std", "nstd_events", "nstd_image"]
nstd_image = ["std", "image", "nstd_core"]
nstd_input = ["std", "nstd_core", "winit", "winit_input_helper"]
nstd_io = ["std", "nstd_string"]
nstd_math = ["std"]
nstd_net = ["std", "nstd_string"]
nstd_os = ["std"]
nstd_os_alloc = ["std", "libc", "nstd_core", "nstd_os", "windows-sys", "windows-sys/Win32_Foundation", "windows-sys/Win32_System_Memory"]
nstd_os_def = ["std", "nstd_os"]
nstd_os_io = ["std", "nstd_core", "nstd_os", "nstd_os_def", "windows-sys", "windows-sys/Win32_Foundation", "windows-sys/Win32_Globalization", "windows-sys/Win32_System_Console"]
nstd_proc = ["std", "nstd_core"]
nstd_rand = ["std", "nstd_core", "rand"]
nstd_string = ["std", "nstd_vec"]
nstd_thread = ["std", "nstd_core"]
nstd_time = ["std", "chrono"]
nstd_vec = ["std", "nstd_alloc"]



[dependencies]
chrono = { version = "0.4", optional = true }
cpal = { version = "0.13", optional = true }
cty = { version = "0.2", optional = true }
futures = { version = "0.3", optional = true }
image = { version = "0.24", optional = true }
platforms = { version = "2.0", optional = true, default-features = false }
rand = { version = "0.8", optional = true }
rodio = { version = "0.15", optional = true }
wgpu = { version = "0.12", optional = true }
winit = { version = "0.26", optional = true }
winit_input_helper = { version = "0.11", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.34", optional = true }
