[package]
name = "nstd_core"
version = "0.3.0"
description = "NSTD core crate."
license = "MIT"
repository = "https://github.com/NyantasticUwU/nstd"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []
clib = []
deps = []

[dependencies]
cty = "0.2.2"
platforms = { version="2.0.0", default-features=false }
