[package]
name = "nstd_gl"
version = "0.5.1"
description = "NSTD graphics library crate."
license = "MIT"
repository = "https://github.com/NyantasticUwU/nstd"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
clib = []
deps = []

[dependencies]
futures = "0.3.19"
nstd_gui = { version="0.5.0", features=["deps"] }
wgpu = { version="0.12", features=["spirv"] }
