[package]
name = "nstd_io"
version = "0.5.0"
description = "NSTD standard I/O crate."
license = "MIT"
repository = "https://github.com/NyantasticUwU/nstd"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
clib = []
deps = []

[dependencies]
nstd_core = { version="0.5.0", features=["deps"] }
