[package]
name = "nstd_audio"
version = "0.1.0"
description = "NSTD audio playback/data callback crate."
license = "MIT"
repository = "https://github.com/NyantasticUwU/nstd"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.4"
nstd_fs = "0.1.0"
rodio = "0.14.0"
