[package]
name = "nstd_collections"
version = "0.2.1"
description = "NSTD collections crate."
license = "MIT"
repository = "https://github.com/NyantasticUwU/nstd"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
clib = []

[dependencies]
nstd_alloc = "0.2.0"
nstd_core = "0.2.3"
