[package]
name = "nstd_env"
version = "0.3.1"
description = "NSTD env crate."
license = "MIT"
repository = "https://github.com/NyantasticUwU/nstd"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
clib = []
deps = []

[dependencies]
nstd_collections = { version="0.3.1", features=["deps"] }
