[package]
name = "nstd_events"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nstd_input = { path="../input" }
num-traits = "0.2.14"
winit = "0.25.0"
