[package]
name = "nstd_events"
version = "0.2.0"
description = "NSTD event handling crate."
license = "MIT"
repository = "https://github.com/NyantasticUwU/nstd"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
clib = []

[dependencies]
nstd_input = "0.2.0"
winit = "0.25.0"
