[package]
name = "nstd_events"
version = "0.3.1"
description = "NSTD event handling crate."
license = "MIT"
repository = "https://github.com/NyantasticUwU/nstd"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
clib = []
deps = []

[dependencies]
nstd_input = { version="0.3.1", features=["deps"] }
