[package]
name = "nstd_gl"
version = "0.1.0"
description = "NSTD graphics library crate."
license = "MIT"
repository = "https://github.com/NyantasticUwU/nstd"
edition = "2021"
resolver="2"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
nstd_core = "0.1.2"
nstd_gui = "0.1.0"
wgpu = { version="0.11.0", features=["spirv"] }
