[package]
name = "nstd_gl"
version = "0.3.0"
description = "NSTD graphics library crate."
license = "MIT"
repository = "https://github.com/NyantasticUwU/nstd"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
clib = []
deps = []

[dependencies]
futures = "0.3.17"
nstd_core = "0.3.0"
nstd_gui = "0.3.0"
wgpu = { version="0.11.1", features=["spirv"] }
