[package]
name = "nstd_gui"
version = "0.2.0"
description = "NSTD windowing crate."
license = "MIT"
repository = "https://github.com/NyantasticUwU/nstd"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
clib = []

[dependencies]
nstd_events = "0.2.0"
nstd_image = "0.2.0"
winit = "0.25.0"
