[package]
name = "nstd_gui"
version = "0.3.2"
description = "NSTD windowing crate."
license = "MIT"
repository = "https://github.com/NyantasticUwU/nstd"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
clib = []
deps = []

[dependencies]
nstd_events = { version="0.3.1", features=["deps"] }
nstd_image = { version="0.3.1", features=["deps"] }
