[package]
name = "nstd_image"
version = "0.2.0"
description = "NSTD imaging crate."
license = "MIT"
repository = "https://github.com/NyantasticUwU/nstd"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
clib = []

[dependencies]
image = "0.23.14"
nstd_core = "0.2.0"
