[package]
name = "nstd_input"
version = "0.3.1"
description = "NSTD device input crate."
license = "MIT"
repository = "https://github.com/NyantasticUwU/nstd"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
clib = []
deps = []

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.14"
winit = "0.25.0"
winit_input_helper = "0.10.0"
